--- a/SentenceClassification.ipynb
+++ b/SentenceClassification.ipynb
@@ -23,7 +23,8 @@
     "from torch.utils.data import Dataset\n",
     "from torch.utils.data.dataloader import DataLoader\n",
     "from transformers.activations import get_activation\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from torch.nn.utils.rnn import pad_sequence\n"
    ]
   },
   {
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +137,7 @@
        "4  ABBREVIATION      ABBR       exp  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,27 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "27560"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(vect.vocabulary_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,14 +286,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "class QuestionDataset(DataLoader):\n",
-    "    def __init__(self, data, labels, max_length, tokenizer):\n",
+    "    def __init__(self, data, labels, tokenizer):\n",
     "        self.data = data\n",
-    "        self.max_length = max_length\n",
     "        self.tokenizer = tokenizer\n",
     "        self.labels = labels\n",
     "\n",
@@ -312,44 +301,54 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        text = self.data[idx]\n",
-    "        encoding = self.tokenizer.encode_plus(\n",
-    "          text,\n",
-    "          add_special_tokens=True,\n",
-    "          max_length=self.max_length,\n",
-    "          return_token_type_ids=False,\n",
-    "          pad_to_max_length=True,\n",
-    "          return_attention_mask=True,\n",
-    "          return_tensors='pt',\n",
-    "        )\n",
-    "        text_tokenized = encoding['input_ids'].flatten()\n",
-    "        attention_mask = encoding['attention_mask'].flatten()\n",
+    "        text_tokenized = self.tokenizer.encode(text)\n",
     "        label = self.labels[idx]\n",
     "        \n",
-    "        return torch.tensor(text_tokenized), torch.tensor(attention_mask), torch.tensor(label)"
+    "        return torch.tensor(text_tokenized), torch.tensor(label)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PadSequenceDataset():\n",
+    "    \n",
+    "    def __init__(self, token_pad_value):\n",
+    "        self.token_pad_value = token_pad_value\n",
+    "\n",
+    "    def __call__(self, batch):\n",
+    "        seqs = [x[0] for x in batch]\n",
+    "        seqs = pad_sequence(seqs, batch_first=True, padding_value=self.token_pad_value)\n",
+    "        label = torch.stack(list(map(lambda x: x[1], batch)))\n",
+    "        return seqs, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_dataloader(texts, labels, pretrained_model_name=None, max_length=64, batch_size=4, shuffle=True, num_workers=0):\n",
     "    tokenizer = BertTokenizer.from_pretrained(pretrained_model_name)\n",
-    "    dataset = QuestionDataset(texts, labels, max_length=max_length, tokenizer=tokenizer)\n",
-    "    return DataLoader(dataset, batch_size=batch_size, shuffle=shuffle, num_workers=num_workers, pin_memory=False)"
+    "    pad_id = tokenizer.pad_token_id\n",
+    "    PS = PadSequenceDataset(token_pad_value=pad_id)\n",
+    "    dataset = QuestionDataset(texts, labels, tokenizer=tokenizer)\n",
+    "    return DataLoader(dataset, batch_size=batch_size, shuffle=shuffle, num_workers=num_workers, collate_fn=PS, pin_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_NAME = 'bert-base-uncased'\n",
+    "MODEL_NAME = 'bert-base-cased'\n",
     "\n",
-    "train_loader = create_dataloader(X_train, y_train, pretrained_model_name=MODEL_NAME)\n",
-    "test_loader = create_dataloader(X_test, y_test, pretrained_model_name=MODEL_NAME)"
+    "# train_loader = create_dataloader(X_train, y_train, pretrained_model_name=MODEL_NAME)\n",
+    "# test_loader = create_dataloader(X_test, y_test, pretrained_model_name=MODEL_NAME)"
    ]
   },
   {
@@ -361,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,13 +375,12 @@
     "        self.dropout = nn.Dropout(0.1)\n",
     "        self.out_proj = nn.Linear(self.bert.config.hidden_size, n_classes)\n",
     "        \n",
-    "    def forward(self, input_ids, attention_mask):\n",
+    "    def forward(self, input_ids):\n",
     "        hidden_states, pooled_output = self.bert(\n",
-    "          input_ids=input_ids,\n",
-    "          attention_mask=attention_mask\n",
+    "          input_ids=input_ids\n",
     "        )\n",
-    "#         sequence_output_cls = hidden_states[:, 0, :]\n",
-    "        x = self.dropout(pooled_output)\n",
+    "        sequence_output_cls = hidden_states[:, 0, :]\n",
+    "        x = self.dropout(sequence_output_cls)\n",
     "        x = self.dense(x)\n",
     "        x = get_activation(\"tanh\")(x)\n",
     "        x = self.dropout(x)\n",
@@ -399,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,14 +408,13 @@
     "    preds = []\n",
     "\n",
     "    for i, batch in tqdm(enumerate(test_loader)):\n",
-    "        x, attention_masks, label = batch\n",
+    "        x, label = batch\n",
     "        label = label.data\n",
     "        labels.append(label)\n",
     "        if cuda:\n",
     "            x = x.cuda()\n",
-    "            attention_masks = attention_masks.cuda()\n",
     "\n",
-    "        prediction = net(x, attention_masks)\n",
+    "        prediction = net(x)\n",
     "        \n",
     "        prediction.to('cpu')\n",
     "        pred_label = prediction.argmax(dim=1).to('cpu')\n",
@@ -435,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,15 +449,14 @@
     "        all_labels = []\n",
     "        all_preds = []\n",
     "        for i, batch in tqdm(enumerate(train_loader)):\n",
-    "            x, attention_masks, labels = batch\n",
+    "            x, labels = batch\n",
     "            labels = labels.long()\n",
     "            if cuda:\n",
     "                x = x.cuda()\n",
     "                labels = labels.cuda()\n",
-    "                attention_masks = attention_masks.cuda()\n",
     "\n",
-    "            prediction = model(x, attention_masks)\n",
-    "            loss = loss_fn(prediction, labels.view(-1))\n",
+    "            prediction = model(x)\n",
+    "            loss = loss_fn(prediction.view(-1, 6), labels.view(-1))\n",
     "            pred = prediction.argmax(dim=-1)\n",
     "            all_labels.append(labels.data.to('cpu'))\n",
     "            all_preds.append(pred.to('cpu'))\n",
@@ -483,17 +479,6 @@
     "            evaluate(model, test_loader)\n",
     "            \n",
     "    criteria = torch.nn.CrossEntropyLoss().cuda()\n",
-    "#     no_decay = [\"bias\", \"LayerNorm.weight\"]\n",
-    "#     optimizer_grouped_parameters = [\n",
-    "#         {\n",
-    "#             \"params\": [p for n, p in net.named_parameters() if not any(nd in n for nd in no_decay)],\n",
-    "#             \"weight_decay\": 0.0,\n",
-    "#         },\n",
-    "#         {\n",
-    "#             \"params\": [p for n, p in net.named_parameters() if any(nd in n for nd in no_decay)],\n",
-    "#             \"weight_decay\": 0.0,\n",
-    "#         },\n",
-    "#     ]\n",
     "    optimizer = torch.optim.Adam([{\"params\": net.parameters(), \"lr\": 0.0001}])\n",
     "    for epoch in range(num_epochs):\n",
     "        print('Epoch:', epoch)\n",
@@ -509,27 +494,95 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1091it [03:07,  5.81it/s]\n",
+      "4it [00:00, 31.25it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average RE loss :  0.6249436834992672\n",
+      "train_cls report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.68      0.27      0.39        62\n",
+      "           1       0.76      0.75      0.75       935\n",
+      "           2       0.67      0.75      0.71       998\n",
+      "           3       0.88      0.86      0.87       988\n",
+      "           4       0.87      0.84      0.85       660\n",
+      "           5       0.88      0.85      0.86       718\n",
+      "\n",
+      "    accuracy                           0.80      4361\n",
+      "   macro avg       0.79      0.72      0.74      4361\n",
+      "weighted avg       0.80      0.80      0.80      4361\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "273it [00:09, 28.38it/s]\n",
+      "1it [00:00,  6.06it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing report:                precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.55      0.75      0.63        24\n",
+      "           1       0.81      0.87      0.84       227\n",
+      "           2       0.87      0.83      0.85       252\n",
+      "           3       0.96      0.93      0.94       235\n",
+      "           4       0.92      0.96      0.94       175\n",
+      "           5       0.98      0.90      0.94       178\n",
+      "\n",
+      "    accuracy                           0.89      1091\n",
+      "   macro avg       0.85      0.87      0.86      1091\n",
+      "weighted avg       0.90      0.89      0.89      1091\n",
+      "\n",
+      "Epoch: 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "896it [02:33,  6.25it/s]"
+     ]
+    }
+   ],
    "source": [
     "train(num_epochs=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({4: 660, 5: 718, 3: 988, 1: 935, 2: 998, 0: 62})"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import collections\n",
     "collections.Counter(y_train)"
@@ -573,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
